fixed spacing

--- a/css/index.css
+++ b/css/index.css
@@ -428,7 +428,7 @@ nav div a:hover {
 }
 .about h1,
 .about h2 {
-  padding: 2rem 0;
+  padding: 1rem 0;
   color: #ffac41;
 }
 .about .about-text {
